<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_LFE_VAC_FSV_PMPS" Id="{222da334-1a6c-4631-aa94-b3f2c98da745}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
//Example implementation of the FFO
    {attribute 'pytmc' := '
	pv: PLC:LFE:VAC:FFO:03    
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PLC_E2_EL2202]^Channel 1^Output'}
    g_FastFaultOutput3  :	FB_HardwareFFOutput;	//FFO for Fast Shutter Valves upstream of ST1L0_XTES
	
	{attribute 'pytmc' := '
    pv: PLC:LFE:VAC:RESET:FF3
    '}
	xReset_PMPS_FFO3	:	BOOL	:=	FALSE;		//FFO RESET for Fast Shutter Valves upstream of ST1L0_XTES	
	
	xFEE_FSV_MPS_OK: BOOL := TRUE;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>