<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="MAIN_FS" Id="{cd87fa27-2963-491a-8560-055b56a6fb32}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN_FS
VAR
	i_xFFReset: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PA1L0_VFS_01(
	i_xPMPS_OK:= TRUE, 
	i_xExt_OK:= TRUE, 
	iq_stValve=>,
	io_fbFFHWO:= g_FastFaultOutput3);
	
TV3L0_VFS_01(
	i_xPMPS_OK:= TRUE, 
	i_xExt_OK:= TRUE, 
	iq_stValve=>,
	io_fbFFHWO:= g_FastFaultOutput3);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>